# chrome_history_script

./: .gitignore  README.md  copy_history.sh  dump_history.py  pyproject.toml
